Updated styles for spacing. Fixed grammar. Removed menu. Updated layout columns.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,7 +15,34 @@ nav {
   font-family: $special-elite, "Lucida Console", Monaco, monospace;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: $special-elite, "Lucida Console", Monaco, monospace;
+}
+
+
+.hi {
+  font-size: 1.75rem;
+}
+
 .site-footer {
   border-top: none;
   padding: 30px 0;
+}
+
+
+/** jekyll theme overrides **/
+.svg-icon {
+  width: 22px;
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-size: 1.25rem;
 }
